--- a/src/styles/components/menu-item.scss
+++ b/src/styles/components/menu-item.scss
@@ -23,16 +23,17 @@
 
     & .content {
       opacity: 0.9;
+      transition: opacity 0.25s ease-in;
     }
   }
 
-  &:first-child {
-    margin-right: 7.5px;
-  }
+  // &:first-child {
+  //   margin-right: 7.5px;
+  // }
 
-  &:last-child {
-    margin-left: 7.5px;
-  }
+  // &:last-child {
+  //   margin-left: 7.5px;
+  // }
 
   .background-image {
     background-position: center;
