added basic collection preview

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,5 +1,7 @@
 @import "./base/settings";
 @import "./base/base";
-@import "./components/directory.scss";
-@import "./components/menu-item.scss";
-@import "./pages/homepage.scss";
+@import "./components/directory";
+@import "./components/menu-item";
+@import "./components/collection-item";
+@import "./components/collection-preview";
+@import "./pages/homepage";
