added header component

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,7 +1,10 @@
 @import "./base/settings";
 @import "./base/base";
+
 @import "./components/directory";
 @import "./components/menu-item";
 @import "./components/collection-item";
 @import "./components/collection-preview";
+@import "./components/header";
+
 @import "./pages/homepage";
