--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -6,5 +6,9 @@
 @import "./components/collection-item";
 @import "./components/collection-preview";
 @import "./components/header";
+@import "./components/form-input";
+@import "./components/sign-in";
+@import "./components/custom-button";
 
 @import "./pages/homepage";
+@import "./pages/signin-signup-page";
