--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -1,9 +1,32 @@
+*,
+*::after,
+*::before {
+  box-sizing: border-box;
+}
+
+html {
+  font-size: 62.5%;
+}
+
 body {
   font-family: "Open Sans Condensed", sans-serif;
-  padding: 20px 60px;
+  padding: 2rem 6rem;
 }
 
 a {
   text-decoration: none;
   color: black;
+}
+
+h2 {
+  font-size: 2.4rem;
+}
+
+span {
+  font-size: 2rem;
+}
+
+#root {
+  margin: 0 auto;
+  width: 75vw;
 }
