--- a/src/styles/components/_collection-item.scss
+++ b/src/styles/components/_collection-item.scss
@@ -2,7 +2,7 @@
   display: flex;
   width: 22%;
   flex-direction: column;
-  height: 350px;
+  height: 35rem;
   align-items: center;
 
   .image {
@@ -18,6 +18,6 @@
     height: 5%;
     display: flex;
     justify-content: space-between;
-    font-size: 18px;
+    font-size: 1.8rem;
   }
 }
