--- a/src/styles/components/_menu-item.scss
+++ b/src/styles/components/_menu-item.scss
@@ -1,12 +1,12 @@
 .menu-item {
   min-width: 30%;
-  height: 240px;
+  height: 24rem;
   flex: 1 1 auto;
   display: flex;
   align-items: center;
   justify-content: center;
   border: 1px solid black;
-  margin: 0 7.5px 15px;
+  margin: 0 0.75rem 1.5rem;
   overflow: hidden;
 
   &:hover {
@@ -31,8 +31,8 @@
   }
 
   .content {
-    height: 90px;
-    padding: 0 25px;
+    height: 9rem;
+    padding: 0 2.5rem;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -44,18 +44,18 @@
 
     .title {
       font-weight: bold;
-      margin-bottom: 6px;
-      font-size: 22px;
+      margin-bottom: 0.6rem;
+      font-size: 2.2rem;
       color: #4a4a4a;
     }
 
     .subtitle {
       font-weight: lighter;
-      font-size: 16px;
+      font-size: 1.6rem;
     }
   }
 
-  @media (max-width: 700px) {
+  @media (max-width: 70rem) {
     width: 100%;
 
     &.large {
@@ -64,6 +64,6 @@
   }
 
   &.large {
-    height: 380px;
+    height: 38rem;
   }
 }
