--- a/src/styles/components/_sign-in.scss
+++ b/src/styles/components/_sign-in.scss
@@ -1,3 +1,14 @@
 .sign-in {
-  width: 30vw;
+  width: 38rem;
+  display: flex;
+  flex-direction: column;
+
+  .title {
+    margin: 1rem 0;
+  }
+
+  .buttons {
+    display: flex;
+    justify-content: space-between;
+  }
 }
