added sign-up component and functionality

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -8,6 +8,7 @@
 @import "./components/header";
 @import "./components/form-input";
 @import "./components/sign-in";
+@import "./components/sign-up";
 @import "./components/custom-button";
 
 @import "./pages/homepage";
