added shopping cart icon and dropdown

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -10,6 +10,8 @@
 @import "./components/sign-in";
 @import "./components/sign-up";
 @import "./components/custom-button";
+@import "./components/cart-icon";
+@import "./components/cart-dropdown";
 
 @import "./pages/homepage";
 @import "./pages/signin-signup-page";
