--- a/src/styles/components/_custom-button.scss
+++ b/src/styles/components/_custom-button.scss
@@ -1,22 +1,25 @@
 .custom-button {
   width: 18rem;
   height: 5rem;
-  letter-spacing: 0.2rem;
+  letter-spacing: 0.2px;
   line-height: 2rem;
   padding: 0;
   font-size: 1.7rem;
-  background-color: $main-color;
+  background-color: black;
   color: white;
   text-transform: uppercase;
   font-family: "Open Sans Condensed";
   font-weight: bolder;
   border: none;
   cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
   &:hover {
     background-color: white;
-    color: $main-color;
-    border: 1px solid $main-color;
+    color: black;
+    border: 1px solid black;
   }
 
   &.google-sign-in {
@@ -25,6 +28,18 @@
 
     &:hover {
       background-color: darken($google-blue, 20%);
+      border: none;
+    }
+  }
+
+  &.inverted {
+    background-color: white;
+    color: black;
+    border: 1px solid black;
+
+    &:hover {
+      background-color: black;
+      color: white;
       border: none;
     }
   }
