--- a/src/styles/components/_collection-preview.scss
+++ b/src/styles/components/_collection-preview.scss
@@ -13,4 +13,8 @@
     display: flex;
     justify-content: space-between;
   }
+
+  @media (max-width: $mobile-breakpoint) {
+    padding: 0 5px;
+  }
 }
