--- a/src/styles/components/_sign-in.scss
+++ b/src/styles/components/_sign-in.scss
@@ -12,4 +12,17 @@
     display: flex;
     justify-content: space-between;
   }
+
+  @media (max-width: $mobile-breakpoint) {
+    width: 100%;
+    padding: 0 5px;
+
+    .title {
+      margin: 1rem auto;
+    }
+
+    span {
+      margin: 0 auto;
+    }
+  }
 }
