--- a/src/styles/components/_sign-up.scss
+++ b/src/styles/components/_sign-up.scss
@@ -6,4 +6,17 @@
   .title {
     margin: 1rem 0;
   }
+
+  @media (max-width: $mobile-breakpoint) {
+    width: 100%;
+    padding: 0 5px;
+
+    .title {
+      margin: 1rem auto;
+    }
+
+    span {
+      margin: 0 auto;
+    }
+  }
 }
