--- a/src/styles/pages/_signin-signup-page.scss
+++ b/src/styles/pages/_signin-signup-page.scss
@@ -7,7 +7,7 @@
   margin: 5rem auto;
 
   @media (max-width: $mobile-breakpoint) {
-    width: 100%;
+    width: 100vw;
     flex-direction: column;
     align-items: center;
   }
