cart-items are now displayed inside the cart-dropdown

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -12,6 +12,7 @@
 @import "./components/custom-button";
 @import "./components/cart-icon";
 @import "./components/cart-dropdown";
+@import "./components/cart-item";
 
 @import "./pages/homepage";
 @import "./pages/signin-signup-page";
