--- a/src/styles/components/_cart-dropdown.scss
+++ b/src/styles/components/_cart-dropdown.scss
@@ -13,13 +13,14 @@
   z-index: 5;
 
   .cart-items {
-    height: 2.4rem;
+    height: 100%;
     display: flex;
     flex-direction: column;
-    overflow: scroll;
+    overflow-x: hidden;
+    overflow-y: scroll;
   }
 
   button {
-    margin-top: auto;
+    margin-top: 2rem;
   }
 }
