--- a/src/styles/components/_cart-dropdown.scss
+++ b/src/styles/components/_cart-dropdown.scss
@@ -1,7 +1,7 @@
 .cart-dropdown {
   position: absolute;
   width: 24rem;
-  height: 34rem;
+  height: 35rem;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -17,7 +17,14 @@
     display: flex;
     flex-direction: column;
     overflow-x: hidden;
-    overflow-y: scroll;
+    overflow-y: auto;
+  }
+
+  .cart-empty {
+    height: 100%;
+    display: flex;
+    font-size: 2rem;
+    align-items: center;
   }
 
   button {
