--- a/src/styles/components/_sign-in.scss
+++ b/src/styles/components/_sign-in.scss
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   margin-bottom: 4rem;
+  padding: 1rem 1rem;
 
   .title {
     margin: 1rem 0;
@@ -15,7 +16,7 @@
 
   @media (max-width: $mobile-breakpoint) {
     width: 100%;
-    padding: 0 5px;
+    padding: 0 5rem;
 
     .title {
       margin: 1rem auto;
