--- a/src/styles/components/_sign-up.scss
+++ b/src/styles/components/_sign-up.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   width: 38rem;
+  padding: 1rem 1rem;
 
   .title {
     margin: 1rem 0;
@@ -9,7 +10,7 @@
 
   @media (max-width: $mobile-breakpoint) {
     width: 100%;
-    padding: 0 5px;
+    padding: 0 5rem;
 
     .title {
       margin: 1rem auto;
