--- a/src/styles/pages/_signin-signup-page.scss
+++ b/src/styles/pages/_signin-signup-page.scss
@@ -1,10 +1,10 @@
 .sing-in-signup {
-  width: 85rem;
+  width: 100%;
   display: flex;
   // align-items: flex-start;
-  justify-content: space-between;
-  justify-items: center;
-  margin: 5rem auto;
+  justify-content: center;
+  margin-top: 5rem;
+  margin: 0 auto;
 
   @media (max-width: $mobile-breakpoint) {
     width: 100vw;
