--- a/src/styles/components/_cart-dropdown.scss
+++ b/src/styles/components/_cart-dropdown.scss
@@ -1,7 +1,7 @@
 .cart-dropdown {
   position: absolute;
   width: 24rem;
-  height: 35rem;
+  height: 36rem;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -23,11 +23,15 @@
   .cart-empty {
     height: 100%;
     display: flex;
-    font-size: 2rem;
     align-items: center;
+
+    span {
+      font-size: 2.5rem;
+    }
   }
 
   button {
     margin-top: 2rem;
+    height: 7rem;
   }
 }
