--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -13,6 +13,8 @@
 @import "./components/cart-icon";
 @import "./components/cart-dropdown";
 @import "./components/cart-item";
+@import "./components/checkout-item";
 
 @import "./pages/homepage";
 @import "./pages/signin-signup-page";
+@import "./pages/checkout-page";
