--- a/src/styles/pages/_checkout-page.scss
+++ b/src/styles/pages/_checkout-page.scss
@@ -4,11 +4,11 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 50px auto 0;
+  margin: 5rem auto 0;
 
   .checkout-header {
     width: 100%;
-    padding: 10px 0;
+    padding: 1rem 0;
     display: flex;
     justify-content: space-between;
     border-bottom: 1px solid darkgrey;
@@ -24,8 +24,11 @@
   }
 
   .total {
-    margin-top: 30px;
+    margin-top: 3rem;
     margin-left: auto;
-    font-size: 36px;
+
+    span {
+      font-size: 3.6rem;
+    }
   }
 }
