--- a/src/styles/components/_sign-up.scss
+++ b/src/styles/components/_sign-up.scss
@@ -1,23 +1,9 @@
 .sign-up {
   display: flex;
   flex-direction: column;
-  width: 38rem;
-  padding: 1rem 1rem;
+  width: 380px;
 
   .title {
-    margin: 1rem 0;
-  }
-
-  @media (max-width: $mobile-breakpoint) {
-    width: 100%;
-    padding: 0 5rem;
-
-    .title {
-      margin: 1rem auto;
-    }
-
-    span {
-      margin: 0 auto;
-    }
+    margin: 10px 0;
   }
 }
