--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -14,7 +14,9 @@
 @import "./components/cart-dropdown";
 @import "./components/cart-item";
 @import "./components/checkout-item";
+@import "./components/collections-overview";
 
 @import "./pages/homepage";
 @import "./pages/signin-signup-page";
 @import "./pages/checkout-page";
+@import "./pages/collection-page";
