--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -4,44 +4,12 @@
   box-sizing: border-box;
 }
 
-html {
-  font-size: 62.5%;
-}
-
 body {
-  font-family: "Open Sans Condensed", sans-serif;
-  padding: 2rem 6rem;
+  font-family: "Open Sans Condensed";
+  padding: 20px 40px;
 }
 
 a {
   text-decoration: none;
   color: black;
-  outline: none;
-}
-
-h2 {
-  font-size: 2.4rem;
-}
-
-span {
-  font-size: 2rem;
-}
-
-.main-container {
-  position: relative;
-  min-width: 35rem;
-  max-width: 75vw;
-  margin: 0 12.5vw;
-}
-
-@media (max-width: $mobile-breakpoint) {
-  body {
-    padding: 2rem 0;
-  }
-
-  .main-container {
-    margin: 0;
-    max-width: 100vw;
-    padding: 0;
-  }
 }
