--- a/src/styles/components/_cart-dropdown.scss
+++ b/src/styles/components/_cart-dropdown.scss
@@ -1,37 +1,29 @@
 .cart-dropdown {
   position: absolute;
-  width: 24rem;
-  height: 36rem;
+  width: 240px;
+  height: 340px;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  padding: 2rem;
+  padding: 20px;
   border: 1px solid black;
   background-color: white;
-  top: 8rem;
-  right: 0;
+  top: 90px;
+  right: 40px;
   z-index: 5;
 
-  .cart-items {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    overflow-x: hidden;
-    overflow-y: auto;
+  .empty-message {
+    font-size: 18px;
+    margin: 50px auto;
   }
 
-  .cart-empty {
-    height: 100%;
+  .cart-items {
+    height: 240px;
     display: flex;
-    align-items: center;
-
-    span {
-      font-size: 2.5rem;
-    }
+    flex-direction: column;
+    overflow: scroll;
   }
 
   button {
-    margin-top: 2rem;
-    height: 7rem;
+    margin-top: auto;
   }
 }
