--- a/src/styles/components/_cart-item.scss
+++ b/src/styles/components/_cart-item.scss
@@ -1,8 +1,8 @@
 .cart-item {
   width: 100%;
   display: flex;
-  height: 7rem;
-  margin-bottom: 1.5rem;
+  height: 80px;
+  margin-bottom: 15px;
 
   img {
     width: 30%;
@@ -14,13 +14,9 @@
     flex-direction: column;
     align-items: flex-start;
     justify-content: center;
-    padding: 1rem 2rem;
+    padding: 10px 20px;
 
     .name {
-      font-size: 16px;
-    }
-
-    .price {
       font-size: 16px;
     }
   }
