--- a/src/styles/components/_custom-button.scss
+++ b/src/styles/components/_custom-button.scss
@@ -1,10 +1,11 @@
 .custom-button {
-  width: 18rem;
-  height: 5rem;
-  letter-spacing: 0.2px;
-  line-height: 2rem;
-  padding: 0;
-  font-size: 1.7rem;
+  min-width: 165px;
+  width: auto;
+  height: 50px;
+  letter-spacing: 0.5px;
+  line-height: 50px;
+  padding: 0 35px 0 35px;
+  font-size: 15px;
   background-color: black;
   color: white;
   text-transform: uppercase;
@@ -14,7 +15,6 @@
   cursor: pointer;
   display: flex;
   justify-content: center;
-  align-items: center;
 
   &:hover {
     background-color: white;
@@ -23,11 +23,11 @@
   }
 
   &.google-sign-in {
-    background-color: $google-blue;
+    background-color: #4285f4;
     color: white;
 
     &:hover {
-      background-color: darken($google-blue, 20%);
+      background-color: #357ae8;
       border: none;
     }
   }
