--- a/src/styles/components/_form-input.scss
+++ b/src/styles/components/_form-input.scss
@@ -1,25 +1,25 @@
 @mixin shrinkLabel {
-  top: -1.4rem;
-  font-size: 1.2rem;
-  color: $main-color;
+  top: -14px;
+  font-size: 12px;
+  color: black;
 }
 
 .group {
   position: relative;
-  margin: 4.5rem 0;
+  margin: 45px 0;
 
   .form-input {
     background: none;
     background-color: white;
-    color: $sub-color;
-    font-size: 1.8rem;
-    padding: 1rem 0.1rem 0.1rem 0.5rem;
+    color: grey;
+    font-size: 18px;
+    padding: 10px 10px 10px 5px;
     display: block;
     width: 100%;
     border: none;
     border-radius: 0;
-    border-bottom: 1px solid $sub-color;
-    margin: 2.5rem 0;
+    border-bottom: 1px solid grey;
+    margin: 25px 0;
 
     &:focus {
       outline: none;
@@ -35,14 +35,14 @@
   }
 
   .form-input-label {
-    color: $sub-color;
-    font-size: 1.6rem;
+    color: grey;
+    font-size: 16px;
     font-weight: normal;
     position: absolute;
     pointer-events: none;
-    left: 0.5rem;
-    top: 1rem;
-    transition: 0.3s ease all;
+    left: 5px;
+    top: 10px;
+    transition: 300ms ease all;
 
     &.shrink {
       @include shrinkLabel();
