--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -1,36 +1,26 @@
 .header {
-  height: 7rem;
+  height: 70px;
   width: 100%;
   display: flex;
   justify-content: space-between;
-  margin-bottom: 2.5rem;
+  margin-bottom: 25px;
 
   .logo-container {
     height: 100%;
-    width: 7rem;
-    padding: 2.5rem 1.5rem;
+    width: 70px;
+    padding: 25px;
   }
 
-  .options-container {
-    width: 70%;
+  .options {
+    width: 50%;
     height: 100%;
     display: flex;
     align-items: center;
     justify-content: flex-end;
-  }
 
-  .option {
-    padding: 1rem 0.5rem;
-    font-size: 2rem;
-    border-bottom: 1px solid transparent;
-    transition: all 0.15s ease-in;
-
-    &:hover {
-      border-bottom: 1px solid black;
+    .option {
+      padding: 10px 15px;
+      cursor: pointer;
     }
-  }
-
-  @media (max-width: $mobile-breakpoint) {
-    justify-content: center;
   }
 }
