--- a/src/styles/components/_menu-item.scss
+++ b/src/styles/components/_menu-item.scss
@@ -1,12 +1,12 @@
 .menu-item {
   min-width: 30%;
-  height: 30rem;
+  height: 240px;
   flex: 1 1 auto;
   display: flex;
   align-items: center;
   justify-content: center;
   border: 1px solid black;
-  margin: 0 0.75rem 1.5rem;
+  margin: 0 7.5px 15px;
   overflow: hidden;
 
   &:hover {
@@ -19,20 +19,31 @@
 
     & .content {
       opacity: 0.9;
-      transition: opacity 0.25s ease-in;
     }
   }
 
+  &.large {
+    height: 380px;
+  }
+
+  &:first-child {
+    margin-right: 7.5px;
+  }
+
+  &:last-child {
+    margin-left: 7.5px;
+  }
+
   .background-image {
-    background-position: center;
-    background-size: cover;
     width: 100%;
     height: 100%;
+    background-size: cover;
+    background-position: center;
   }
 
   .content {
-    height: 9rem;
-    padding: 0 2.5rem;
+    height: 90px;
+    padding: 0 25px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -44,28 +55,14 @@
 
     .title {
       font-weight: bold;
-      margin-bottom: 0.6rem;
-      font-size: 2.2rem;
+      margin: 0 6px 0;
+      font-size: 22px;
       color: #4a4a4a;
     }
 
     .subtitle {
       font-weight: lighter;
-      font-size: 1.6rem;
-    }
-  }
-
-  &.large {
-    height: 45rem;
-  }
-
-  @media (max-width: $mobile-breakpoint) {
-    width: 100%;
-    height: 25rem;
-
-    &.large {
-      width: 100%;
-      height: 30rem;
+      font-size: 16px;
     }
   }
 }
