--- a/src/styles/components/_sign-in.scss
+++ b/src/styles/components/_sign-in.scss
@@ -1,29 +1,14 @@
 .sign-in {
-  width: 38rem;
+  width: 380px;
   display: flex;
   flex-direction: column;
-  margin-bottom: 4rem;
-  padding: 1rem 1rem;
 
   .title {
-    margin: 1rem 0;
+    margin: 10px 0;
   }
 
   .buttons {
     display: flex;
     justify-content: space-between;
-  }
-
-  @media (max-width: $mobile-breakpoint) {
-    width: 100%;
-    padding: 0 5rem;
-
-    .title {
-      margin: 1rem auto;
-    }
-
-    span {
-      margin: 0 auto;
-    }
   }
 }
