--- a/src/styles/pages/_signin-signup-page.scss
+++ b/src/styles/pages/_signin-signup-page.scss
@@ -1,14 +1,6 @@
-.sing-in-signup {
-  width: 100%;
+.sign-in-and-sign-up {
+  width: 850px;
   display: flex;
-  // align-items: flex-start;
-  justify-content: center;
-  margin-top: 5rem;
-  margin: 0 auto;
-
-  @media (max-width: $mobile-breakpoint) {
-    width: 100vw;
-    flex-direction: column;
-    align-items: center;
-  }
+  justify-content: space-between;
+  margin: 30px auto;
 }
